# c5_SARIMA_ML_model

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
_bmad/_config/: manifest.yaml
configs/datasets/: event_annotations.yaml
data/raw/: c5_aggregated_matrix.csv  c5_date.csv  c5_predictions.csv  c5_predictions_detail.csv  c5_predictions_recency_weighted.csv  c5_predictions_recency_weighted_detail.csv  c5_predictions_rolling_window.csv  c5_predictions_rolling_window_detail.csv
docs/: SENIOR_REPRESENTATIVE_PLAYBOOK.md  anomaly-policy.md  architecture.md  prd.md
docs/architecture/: coding-standards.md  source-tree.md  tech-stack.md
docs/runbook/: docker-usage.md
docs/stories/: epic-1-overview.md  multi-model-prediction-export-completion.md  prediction-export-completion.md  story-1.1-project-skeleton.md  story-1.2-raw-ingestion-validation.md  story-1.3-event-annotation.md  story-1.4-working-datasets.md  story-1.5-canary-forecast.md  story-2.1-backtest-engine.md  story-2.2-backtest-metrics.md  story-2.3-baseline-ladder.md  story-2.4-experiment-comparison.md  story-3.1-sarima-candidate.md  story-3.2-count-aware-candidate.md  story-3.3-gbm-ranking-challenger.md  story-3.4-ensemble-champion-selection.md  story-4.1-containerization.md
scripts/: analyze_temporal_diversity.py
src/c5_forecasting/: __init__.py  __main__.py
tests/integration/: test_annotation.py  test_backtest.py  test_champion_flow.py  test_cli.py  test_dataset_builder.py  (+9 more)
(+56 files in other folders)
