[project]
name = "c5-forecasting"
version = "0.1.0"
description = "Next-event ranking forecast platform for daily part-demand prediction"
requires-python = ">=3.11,<3.12"
license = "MIT"

[tool.poetry]
name = "c5-forecasting"
version = "0.1.0"
description = "Next-event ranking forecast platform for daily part-demand prediction"
authors = []
packages = [{include = "c5_forecasting", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2"
numpy = "^2.0"
typer = "^0.15"
pydantic = "^2.10"
pydantic-settings = "^2.7"
pyarrow = "^19.0"
structlog = "^25.1"
joblib = "^1.4"
pyyaml = "^6.0"
statsmodels = "^0.14"
scikit-learn = "^1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"
ruff = "^0.11"
mypy = "^1.15"
types-PyYAML = "^6.0"

[tool.poetry.scripts]
forecasting = "c5_forecasting.cli.main:app"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
